--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -4956,7 +4956,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 3** The initial dataset was (330,27) and included the resort in question, Big Mountain. In order to clean up the data, certain columns and entries were removed, such as the 'fastEights' column which was dropped because the values were almost all missing or 0, and a specific entry in the 'yearsOpen' column was dropped due to the provided number being impossibly high. The AdultWeekend is our target feature because fewer rows were missing it and for all other resorts in the same state as our resort, the weekend and weekday prices are the same. Rows which were missing the AdultWeekend value were dropped from the table. The statewide summaries were made by pull"
+    "**A: 3** The initial dataset was (330,27) and included the resort in question, Big Mountain. In order to clean up the data, certain columns and entries were removed, such as the 'fastEights' column which was dropped because the values were almost all missing or 0, and a specific entry in the 'yearsOpen' column was dropped due to the provided number being impossibly high. The AdultWeekend is our target feature because fewer rows were missing it and for all other resorts in the same state as our resort, the weekend and weekday prices are the same. Rows which were missing the AdultWeekend value were dropped from the table. The statewide summaries were made by pulling in population data from wikipedia using the read_html function and were then merged in with the states in question to get a table with relevant information on states with resorts."
    ]
   }
  ],
